# emailagent2

./: README.md
Emailagent/: Dockerfile  baseline.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
Emailagent/emailagent/: app.py  models.py
Emailagent/emailagent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Emailagent/openenv_emailagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Emailagent/server/: app.py
