[project]
name = "emailagent"
version = "0.1.0"
description = "Autonomous Email Triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.scripts]
server = "emailagent.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"